--- a/DNMPWindowsClient/www-data/index.html
+++ b/DNMPWindowsClient/www-data/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/content/css/style.css"/>
         <link rel="stylesheet" href="/content/css/icons.min.css"/>
         <link rel="stylesheet" href="/content/css/animate.css"/>
+        <link rel="shortcut icon" href="/content/favicon.ico" type="image/x-icon"/>
     </head>
     <body>
         <div id="start-bg-loader"><div class="spinner"></div><div id="current-status">Подключение к клиенту...</div></div>
