--- a/DNMPWindowsClient/www-data/index.html
+++ b/DNMPWindowsClient/www-data/index.html
@@ -33,7 +33,8 @@
                                 <th>ID</th>
                                 <th class="dev-mode">ID предка</th>
                                 <th class="dev-mode">Удалённый IP:Порт</th>
-                                <th>Внутренний IP</th>
+                                <th class="dev-mode">Внутренний IP</th>
+                                <th>Внутренний домен</th>
                                 <th>Прямое соединение</th>
                                 <th>Задержка</th>
                                 <th>Байт принято</th>
