some stun fixes

--- a/DnmpNetworkClient/www-data/front/ru.html
+++ b/DnmpNetworkClient/www-data/front/ru.html
@@ -24,8 +24,8 @@
                 'removing-network-front-status': 'Удаление сети...',
                 'connecting-front-status': 'Подключение...',
                 'saving-config-front-status': 'Сохранение настроек...',
-                'stun-connection-error': 'Ошибка STUN при определении внещнего IP/порта. Попробуйте вручную сделать проброс порта или обратится к администратору сети.',
-                'generic-connection-error': 'Ошибка при обработке подключения',
+                'notification-stun-error': 'Ошибка STUN при определении внещнего IP/порта. Попробуйте вручную сделать проброс порта или обратится к администратору сети. Скорее всего сеть будет доступна только в переделах локальной сети.',
+                'generic-connection-error': 'Ошибка при обработке подключения: {0}',
                 'invite-code-generated-message': 'Инвайт-код сгенерирован успешно',
                 'network-key-generated-message': 'Ключ-код сгенерирован успешно',
                 'invite-code-added-text': 'В сеть с ID {0} успешно добавлено {1} клиентов',
